# machine-learning-api

./: README.md  main.py  modelo.pkl  pyproject.toml
notebooks/: analise-de-sentimento.ipynb  casas-preco.ipynb  requests.ipynb
